Fixed images overflowing

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,8 +1,10 @@
-.navbar {
-  height: 100%;
+.navbar-container {
+  position: fixed;
   width: 100%;
+  height: 10%;
+}
 
-  height: 100vh;
-
-  width: 100vw;
+.navbar {
+  position: relative;
+  align-items: center;
 }
